--- a/03-CSS -Fundamentals/style.css
+++ b/03-CSS -Fundamentals/style.css
@@ -4,11 +4,13 @@
   padding: 0;
 }
 
+/* PAGE SECTIONS */
 body {
   font-family: sans-serif;
   color: #444;
 
   border-top: 10px solid #1098ad;
+  position: relative;
 }
 
 .container {
@@ -16,6 +18,7 @@ body {
   /* margin-left: auto;
   margin-right: auto; */
   margin: 0 auto;
+  /* position: relative; */
 }
 
 .main-header {
@@ -25,11 +28,12 @@ body {
   padding-right: 40px; */
   padding: 20px 40px;
   margin-bottom: 60px;
-  height: 80px;
+  /* height: 80px; */
 }
 
 nav {
   font-size: 18px;
+  /* text-align: center; */
 }
 
 article {
@@ -38,8 +42,10 @@ article {
 
 .post-header {
   margin-bottom: 40px;
+  /* position: relative; */
 }
 
+/* SMALLER ELEMENTS */
 h1,
 h2,
 h3 {
@@ -84,6 +90,7 @@ ol {
 li {
   font-size: 20px;
   margin-bottom: 10px;
+  /* display: inline; */
 }
 
 li:last-child {
@@ -177,6 +184,61 @@ a:active {
 .post-image {
   width: 100%;
   height: auto;
+}
+
+nav a:link {
+  /* background-color: orange;
+  margin: 20px;
+  padding: 20px;
+  display: block; */
+
+  margin-right: 30px;
+  margin-top: 30px;
+  display: inline-block;
+}
+
+nav a:link:last-child {
+  margin-right: 0;
+}
+
+button {
+  font-size: 20px;
+  padding: 20px;
+  cursor: pointer;
+
+  position: absolute;
+  bottom: 50px;
+  right: 50px;
+}
+
+h1::first-letter {
+  font-style: normal;
+  margin-right: 5px;
+}
+
+/* h2::first-letter {
+  font-size: 80px;
+}
+
+h3 + p::first-line {
+  color: red;
+} */
+
+h2 {
+  /* background-color: orange; */
+  position: relative;
+}
+
+h2::before {
+  content: "top";
+  text-transform: uppercase;
+  background-color: yellow;
+  color: black;
+  position: absolute;
+  top: -10px;
+  right: -20px;
+  padding: 5px 10px;
+  font-size: 16px;
 }
 
 /* Resolving conflicts */
