--- a/practice/klon/css/style.css
+++ b/practice/klon/css/style.css
@@ -17,8 +17,8 @@ p {
   margin: 0 auto;
 }
 
-.grid-container {
-  display: grid;
+.flex-container {
+  display: flex;
 }
 
 /* NAVIGATION */
@@ -57,6 +57,7 @@ h2 {
 }
 .main {
   width: 70%;
+  margin-right: 50px;
 }
 .main-header {
   position: relative;
@@ -79,6 +80,18 @@ ul {
   padding: 20px;
   position: relative;
   /* display: inline-block; */
+}
+
+.club-desc {
+  margin: 10px;
+  line-height: 1.4;
+  width: 40%;
+}
+
+.rating {
+  width: 25%;
+  font-weight: bold;
+  font-size: 36px;
 }
 
 .special-offer {
