--- a/practice/positioning/style.css
+++ b/practice/positioning/style.css
@@ -4,18 +4,12 @@
   padding: 0;
 }
 
-html,
 body {
-  height: 100%;
-}
-
-.container {
   background-color: grey;
   display: grid;
   grid-template-columns: 1fr 100px 1fr;
   grid-template-rows: 1fr 100px 1fr;
-  row-gap: 350px;
-  min-height: 100%;
+  height: 100vh;
 }
 
 .square {
