--- a/practice/klon/css/grid_style.css
+++ b/practice/klon/css/grid_style.css
@@ -9,8 +9,8 @@ body {
   /* SETTING RELATED ARTICLES WIDHT TO 250px TO MATCH THE IMG WIDTH */
   /* +20px RIGHT MARGIN */
   grid-template-columns: 5vw 5fr 270px 5vw;
-  gap: 40px 5vw;
-  background-color: rgba(255, 182, 193);
+  column-gap: 5vw;
+  background-color: rgb(253, 243, 242);
   font-family: sans-serif;
 }
 
@@ -25,6 +25,7 @@ a {
 /* NAVIGATION */
 .nav-container {
   background-color: white;
+  margin-bottom: 40px;
   grid-column: 1 / -1;
 }
 
@@ -42,7 +43,7 @@ a {
 .hamburger div {
   width: 35px;
   height: 3px;
-  background-color: rgba(255, 182, 193);
+  background-color: rgb(246, 90, 75);
   margin: 6px 0;
 }
 
@@ -65,10 +66,24 @@ a {
   background-color: grey;
 }
 
+.flag {
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+}
+
 #language-form {
   /* float: right; */
-  display: inline;
+  display: inline-block;
   margin: 0 10px;
+}
+
+.lang-select {
+  display: flex;
+}
+
+#lang {
+  border: none;
 }
 
 /* MAIN */
@@ -82,21 +97,22 @@ h3 {
 }
 
 .main-header {
+  margin-bottom: 40px;
   grid-column: 2 / span 2;
 }
 
 .clubs {
+  margin-bottom: 40px;
   grid-column: 2;
 }
 
 .clubs-header {
-  position: relative;
+  display: flex;
+  justify-content: space-between;
 }
 
 .rates {
-  position: absolute;
-  top: 10px;
-  right: 0;
+  padding: 5px;
 }
 
 .flex-club {
@@ -120,7 +136,7 @@ h3 {
   padding: 10px;
 }
 
-#img-rating {
+.ico-rating {
   display: none;
 }
 
@@ -152,7 +168,7 @@ h3 {
 
 .special-offer {
   color: white;
-  background-color: coral;
+  background-color: rgb(246, 90, 75);
   position: absolute;
   top: -30px;
   left: 0px;
@@ -162,7 +178,7 @@ h3 {
 }
 
 .visit-button {
-  background-color: coral;
+  background-color: rgb(246, 90, 75);
   border: none;
   border-radius: 5px;
   color: white;
@@ -201,6 +217,7 @@ ul {
 }
 
 .articles-more {
+  margin-bottom: 40px;
   display: block;
   text-align: center;
 }
@@ -212,18 +229,20 @@ ul {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 40px;
   grid-column: 2 / span 2;
 }
 
 .more-info-header {
-  color: rgb(226, 117, 117);
+  color: rgb(246, 90, 75);
+  margin-bottom: 40px;
   grid-column: 2 / span 2;
-  border-bottom: 2px solid rgb(226, 117, 117);
+  border-bottom: 2px solid rgb(246, 90, 75);
   line-height: 0.1em;
 }
 
 .more-info-text {
-  background-color: rgba(255, 182, 193);
+  background-color: rgb(253, 243, 242);
   padding-right: 10px;
 }
 
@@ -239,7 +258,7 @@ ul {
 /* FOOTER */
 footer {
   height: 200px;
-  background-color: coral;
+  background-color: rgb(246, 90, 75);
   color: white;
   font-size: 12px;
   grid-column: 1 / -1;
@@ -263,8 +282,33 @@ footer a:first-child {
   padding-left: 0;
 }
 
+.cookies {
+  background: white;
+  grid-column: 1 / -1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+}
+
+.cookies-desc {
+  padding: 10px 20px;
+}
+
+.agree-btn {
+  background-color: rgb(43, 43, 43);
+  color: white;
+  text-decoration: none;
+  width: 145px;
+  text-align: center;
+  margin: 20px;
+  padding: 20px;
+  font-size: 24px;
+}
+
 /* MEDIA */
-@media (max-width: 1024px) {
+/* TABLET */
+@media (max-width: 1023px) {
   /* RESETTING */
   body {
     grid-template-columns: 1fr;
@@ -301,9 +345,21 @@ footer a:first-child {
   footer {
     display: none;
   }
+
+  .cookies {
+    flex-direction: column;
+  }
+
+  .agree-btn {
+    width: 100px;
+    margin-top: 0;
+    padding: 10px;
+    font-size: 20px;
+  }
 }
 
-@media (max-width: 768px) {
+/* MOBILE */
+@media (max-width: 767px) {
   /* RESETTING */
   body {
     grid-template-columns: 1fr;
@@ -332,6 +388,7 @@ footer a:first-child {
     width: 100%;
     margin: 0;
     padding: 10px;
+    border-bottom: 1px solid rgb(238, 238, 238);
   }
 
   .rating {
@@ -369,31 +426,50 @@ footer a:first-child {
   }
 
   .ico-container {
-    grid-row: 1 / span 2;
     align-self: stretch;
     justify-self: stretch;
     background-color: rgb(238, 238, 238);
     /* padding: 20% 10%; */
+    display: grid;
+    columns: 1fr;
+    align-content: end;
   }
 
   .club-icon {
     padding: 0;
     box-shadow: none;
-    border-radius: 5px;
     display: block;
     margin: 0 auto;
+    height: 100%;
+  }
+
+  .club-icon > img {
+    border-radius: 5px;
   }
 
   /* SHUFFLE RATING POSITIONS */
-  #ico-rating {
+  .ico-rating-container {
+    display: block;
+    width: 100%;
+    height: 100%;
+    order: 1;
+    background-color: rgb(238, 238, 238);
+    text-align: center;
+  }
+
+  .ico-rating {
     display: block;
   }
 
-  #club-rating {
+  .club .visit-button {
+    order: 1;
+  }
+
+  .club-rating {
     display: none;
   }
 
-  #club-desc-num-rating {
+  .club-desc-num-rating {
     display: block;
     font-weight: bold;
     font-size: 36px;
