--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -11,17 +11,23 @@
     Line heights:
     Default: 1
 
---- 02 Colors
+*/
 
-    Primary: #e67e22
+/* --- 02 Colors */
+:root {
+  --primary-color: #e67e22;
 
-    Tints:
-    Shades:
-    Accents:
-    Greys:
-    #555
+  /* Tints: */
+  --tint-1: #fdf2e9;
+  /* Shades: */
+  --shade-1: #cf711f;
+  /* Accents: */
+  /* Greys: */
+  --grey-1: #555;
+  --grey-2: #333;
+}
 
---- 03 Images
+/* --- 03 Images
 
     unsplash.com
     uifaces.com
@@ -51,8 +57,114 @@ html {
 }
 
 body {
-  font-family: sans-serif;
+  font-family: "Rubik", sans-serif;
   line-height: 1;
   font-weight: 400;
-  color: #555;
+  color: var(--grey-1);
+}
+
+.section-hero {
+  background-color: var(--tint-1);
+  padding: 9.6rem 0;
+}
+
+.hero {
+  max-width: 130rem;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  gap: 9.6rem;
+}
+
+.hero-img {
+  width: 100%;
+}
+
+.heading-primary {
+  font-size: 5.2rem;
+  font-weight: 700;
+  line-height: 1.05;
+  color: var(--grey-2);
+  letter-spacing: -0.5px;
+  margin-bottom: 3.2rem;
+}
+
+.btn:link,
+.btn:visited {
+  display: inline-block;
+  font-size: 2rem;
+  font-weight: 600;
+  padding: 1.6rem 3.2rem;
+  border-radius: 9px;
+  text-decoration: none;
+
+  transition: background-color 0.3s;
+}
+
+.btn--full:link,
+.btn--full:visited {
+  background-color: var(--primary-color);
+  color: #fff;
+}
+
+.btn--full:hover,
+.btn--full:active {
+  background-color: var(--shade-1);
+  color: #fff;
+}
+
+.btn--outline:link,
+.btn--outline:visited {
+  background-color: #fff;
+  color: var(--grey-1);
+}
+
+.btn--outline:hover,
+.btn--outline:active {
+  background-color: var(--tint-1);
+  box-shadow: inset 0 0 0 3px #fff;
+}
+
+.hero-description {
+  font-size: 2rem;
+  line-height: 1.6;
+  margin-bottom: 4.8rem;
+}
+
+.margin-right-sm {
+  margin-right: 1.6rem !important;
+}
+
+.delivered-meals {
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+  margin-top: 8rem;
+}
+
+.delivered-imgs {
+  display: flex;
+}
+
+.delivered-imgs img {
+  height: 4.8rem;
+  width: 4.8rem;
+  border-radius: 50%;
+  margin-right: -1.6rem;
+  border: 3px solid var(--tint-1);
+}
+
+.delivered-imgs img:last-child {
+  margin: 0;
+}
+
+.delivered-text {
+  font-size: 1.8rem;
+  font-weight: 600;
+}
+
+.delivered-text span {
+  color: var(--shade-1);
+  font-weight: 700;
 }
