--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -1,76 +1,70 @@
-/* 
+/* ************************** */
+/* HEADER */
+/* ************************** */
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--tint-1);
 
---- 01 Typography
-
-    FONT SIZE SYSTEM (px)
-    10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
-
-    Font weights:
-    Default: 400
-
-    Line heights:
-    Default: 1
-
-*/
-
-/* --- 02 Colors */
-:root {
-  --primary-color: #e67e22;
-
-  /* Tints: */
-  --tint-1: #fdf2e9;
-  /* Shades: */
-  --shade-1: #cf711f;
-  /* Accents: */
-  /* Greys: */
-  --grey-1: #555;
-  --grey-2: #333;
+  height: 9.6rem;
+  padding: 0 4.8rem;
 }
 
-/* --- 03 Images
-
-    unsplash.com
-    uifaces.com
-
---- 04 Icons
-
---- 05 Shadows
-
---- 06 Border radius
-
---- 07 Layout
-
-    SPACING SYSTEM (px)
-    2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
-
- */
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+.logo {
+  height: 2.2rem;
 }
 
-html {
-  /* font-size: 10px; */
-  font-size: 62.5%;
+/* ************************** */
+/* NAVIGATION */
+/* ************************** */
+.main-nav-list {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 3.2rem;
 }
 
-body {
-  font-family: "Rubik", sans-serif;
-  line-height: 1;
-  font-weight: 400;
-  color: var(--grey-1);
+.main-nav-link:link,
+.main-nav-link:visited {
+  display: inline-block;
+  text-decoration: none;
+  color: var(--grey-2);
+  font-weight: 500;
+  font-size: 1.8rem;
+  transition: all 0.3s;
 }
 
+.main-nav-link:hover,
+.main-nav-link:active {
+  color: var(--primary-color);
+}
+
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited {
+  padding: 1.2rem 2.4rem;
+  border-radius: 9px;
+  color: #fff;
+  background-color: var(--primary-color);
+}
+
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active {
+  background-color: var(--shade-1);
+}
+
+/* ************************** */
+/* HERO SECTION */
+/* ************************** */
 .section-hero {
   background-color: var(--tint-1);
-  padding: 9.6rem 0;
+  padding: 4.8rem 0 9.6rem;
 }
 
 .hero {
   max-width: 130rem;
   margin: 0 auto;
+  padding: 0 3.2rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: center;
@@ -81,59 +75,10 @@ body {
   width: 100%;
 }
 
-.heading-primary {
-  font-size: 5.2rem;
-  font-weight: 700;
-  line-height: 1.05;
-  color: var(--grey-2);
-  letter-spacing: -0.5px;
-  margin-bottom: 3.2rem;
-}
-
-.btn:link,
-.btn:visited {
-  display: inline-block;
-  font-size: 2rem;
-  font-weight: 600;
-  padding: 1.6rem 3.2rem;
-  border-radius: 9px;
-  text-decoration: none;
-
-  transition: background-color 0.3s;
-}
-
-.btn--full:link,
-.btn--full:visited {
-  background-color: var(--primary-color);
-  color: #fff;
-}
-
-.btn--full:hover,
-.btn--full:active {
-  background-color: var(--shade-1);
-  color: #fff;
-}
-
-.btn--outline:link,
-.btn--outline:visited {
-  background-color: #fff;
-  color: var(--grey-1);
-}
-
-.btn--outline:hover,
-.btn--outline:active {
-  background-color: var(--tint-1);
-  box-shadow: inset 0 0 0 3px #fff;
-}
-
 .hero-description {
   font-size: 2rem;
   line-height: 1.6;
   margin-bottom: 4.8rem;
-}
-
-.margin-right-sm {
-  margin-right: 1.6rem !important;
 }
 
 .delivered-meals {
@@ -167,4 +112,60 @@ body {
 .delivered-text span {
   color: var(--shade-1);
   font-weight: 700;
+}
+
+/* ************************** */
+/* HOW IT WORKS SECTION */
+/* ************************** */
+.section-how {
+  padding: 9.6rem 0;
+}
+
+.step-number {
+  font-size: 8.6rem;
+  font-weight: 600;
+  color: var(--grey-3);
+  margin-bottom: 1.2rem;
+}
+
+.step-description {
+  font-size: 1.8rem;
+  line-height: 1.8;
+}
+
+.step-img-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.step-img-box::before,
+.step-img-box::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+}
+
+.step-img-box::before {
+  width: 60%;
+  /* height: 60%; */
+  padding-bottom: 60%;
+  background-color: var(--tint-1);
+  z-index: -2;
+}
+
+.step-img-box::after {
+  width: 45%;
+  padding-bottom: 45%;
+  background-color: var(--tint-2);
+  z-index: -1;
+}
+
+.step-img {
+  width: 35%;
 }
