--- a/07-Omnifood-Desktop/css/general.css
+++ b/07-Omnifood-Desktop/css/general.css
@@ -37,6 +37,11 @@ Paragraph default: 1.6
   --grey-1: #555;
   --grey-2: #333;
   --grey-3: #ddd;
+
+  /* Tags */
+  --tag-color-vegetarian: #51cf66;
+  --tag-color-vegan: #94d32d;
+  --tag-color-paleo: #ffd43b;
 }
 
 /* --- 03 Images
@@ -49,6 +54,9 @@ Paragraph default: 1.6
   --- 05 Shadows
   
   --- 06 Border radius
+
+  Default: 9px
+  Medium: 11px
   
   --- 07 Layout
   
@@ -151,7 +159,7 @@ body {
   border-radius: 9px;
   text-decoration: none;
 
-  transition: background-color 0.3s;
+  transition: all 0.3s;
 }
 
 .btn--full:link,
@@ -178,6 +186,36 @@ body {
   box-shadow: inset 0 0 0 3px #fff;
 }
 
+.link:link,
+.link:visited {
+  display: inline-block;
+  color: var(--primary-color);
+  text-decoration: none;
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 2px;
+  transition: all 0.3;
+}
+
+.link:hover,
+.link:active {
+  color: var(--shade-1);
+  border-bottom: 1px solid transparent;
+}
+
+/* HELPER CLASSES */
+
 .margin-right-sm {
   margin-right: 1.6rem !important;
+}
+
+.margin-bottom-md {
+  margin-bottom: 4.8rem !important;
+}
+
+.center-text {
+  text-align: center;
+}
+
+strong {
+  font-weight: 500;
 }
